--- a/66130151_week03/ContactMe.html
+++ b/66130151_week03/ContactMe.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -20,11 +22,12 @@
     <main>
         <h1>Contact Me</h1>
         <p>If you have any questions or would like to get in touch, please contact me at:</p>
-        <p>Email: <a href="mailto:yourname@example.com">66130151@dpu.ac.th</a></p>
+        <p>Email: <a href="mailto:peerapat.atta@gmail.com" target="_blank">peerapat.atta@gmail.com</a></p>
         <p>Phone: +66 087-697-6306</p>
     </main>
     <footer>
         <p>&copy; 2024 Peerapat Atta 66130151</p>
     </footer>
 </body>
+
 </html>
